--sun-misc-unsafe-memory-access=allow  protobuf